Bug 89785 - UI: Insert Index/Table Sort drop down lists' width sizes are too narrow in Type Alphabetical Index and Bibliography
Summary: UI: Insert Index/Table Sort drop down lists' width sizes are too narrow in T...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.0 target:4.4.3
Keywords: bibisected, bisected, regression
: 90016 (view as bug list)
Depends on:
Blocks: TableofContents-Indexes
  Show dependency treegraph
 
Reported: 2015-03-02 19:59 UTC by Gordo
Modified: 2015-12-17 08:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot1 (43.58 KB, image/png)
2015-03-02 19:59 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-03-02 19:59:09 UTC
Created attachment 113836 [details]
screenshot1

1. Insert -> Indexes and Tables -> Indexes and Tables...
2. Index/Table tab
3. From Type drop down list, select Alphabetical Index or Bibliography
4. Look at the Sort section Language and Key Type drop down lists.
5. Click on one of those drop down lists then click again.
6. Width expands

After that, if you switch to the other Type then it will have expanded those as well.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: en_GB
Comment 1 Buovjaga 2015-03-05 12:55:42 UTC
Reproduced on Win & Ubuntu.
On Ubuntu the Sort is even partially hidden by the subframe contents overflowing!

Works ok in 4.3.5.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI

Ubuntu 14.10 64-bit Version: 4.5.0.0.alpha0+
Build ID: c91bfb9ac7d110c5dca0ea34ec0e1668a985b34c
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-02-25_12:28:45
Locale: en_US

Version: 4.3.5.2
Build ID: 3a87456aaa6a95c63eea1c1b3201acedf0751bd5
Comment 2 Matthew Francis 2015-03-14 14:27:23 UTC
The issue seems to have started at the below commit.
Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this? Thanks

    commit 7dda48d56f2d10bd6220fba19168ee1a70ecc05f
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Tue Jul 1 15:04:10 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Jul 1 16:43:05 2014 +0100
    
        Related: fdo#80633 cache optimal size
    
        Change-Id: Ic2c3aefebd3061d294f339c6d262a3c3e381fbe4
Comment 3 Matthew Francis 2015-03-16 02:31:43 UTC
*** Bug 90016 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2015-04-03 08:05:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1038a323fb407bcc514426a2fb9e251216d37399

Resolves: tdf#89785 drop down list sizes locked in too early

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-04-03 10:04:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e80a94284be2e73526d41fc6be99c7255f4c2ca3&h=libreoffice-4-4

Resolves: tdf#89785 drop down list sizes locked in too early

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:47:50 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]