Resolves: tdf#89785 drop down list sizes locked in too early

get initial size request after language and sort lists have
been filled.

We should really queue_resize in list/combo boxes if the StateChanged::DATA
gets emitted for them. But we're mostly gotten away with it so far.

Change-Id: I37137365e8e71b8f803977edaf46d6c7cfb3fcc2